Add --add-opens into readme